--- a/app/index.html
+++ b/app/index.html
@@ -5,41 +5,58 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
   <title>Notifications page</title>
   <link rel="stylesheet"  href="/app/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.google.com/share?selection.family=Plus+Jakarta+Sans:wght@500" rel="stylesheet">
+
 </head>
 <body>
 
   <div>
-    <div>
+    <div id="header">
       <h1>Notifications 3</h1>
 
       <h2>Mark all as read</h2>
     </div>
 
     <div>
-      <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
-      <p>1m ago</p>
+      <div class="notification">
+        <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
+        <p>1m ago</p>
+      </div>
 
-      <h3>Angela Gray followed you</h3>
-      <p>5m ago</p>
+      <div class="notification">
+        <h3>Angela Gray followed you</h3>
+        <p>5m ago</p>
+      </div>
 
-      <h3>Jacob Thompson has joined your group Chess Club</h3>
-      <p>1 day ago</p>
+      <div class="notification">
+        <h3>Jacob Thompson has joined your group Chess Club</h3>
+        <p>1 day ago</p>
+      </div>
 
-      <h3>Rizky Hasanuddin sent you a private message</h3>
-      <p>5 days ago</p>
-      <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+      <div class="notification">
+        <h3>Rizky Hasanuddin sent you a private message</h3>
+        <p>5 days ago</p>
+        <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+      </div>
 
-      <h3>Kimberly Smith commented on your picture</h3>
-      <p>1 week ago</p>
+      <div class="notification">
+        <h3>Kimberly Smith commented on your picture</h3>
+        <p>1 week ago</p>
+      </div>
 
-      <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
-      <p>2 weeks ago</p>
+      <div class="notification">
+        <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
+        <p>2 weeks ago</p>
+      </div>
 
-      <h3>Anna Kim left the group Chess Club</h3>
-      <p>2 weeks ago</p>
+      <div class="notification">
+        <h3>Anna Kim left the group Chess Club</h3>
+        <p>2 weeks ago</p>
+      </div>
     </div>
   </div>
   
