--- a/app/index.html
+++ b/app/index.html
@@ -21,42 +21,59 @@
       <h2>Mark all as read</h2>
     </div>
 
-    <div>
-      <div class="notification">
-        <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
-        <p>1m ago</p>
+    <div id="main-container">
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
+        </a>
+        <p class="dayof">1m ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Angela Gray followed you</h3>
-        <p>5m ago</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Angela Gray followed you</h3>
+        </a>
+        <p class="dayof">5m ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Jacob Thompson has joined your group Chess Club</h3>
-        <p>1 day ago</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Jacob Thompson has joined your group Chess Club</h3>
+        </a>
+        <p class="dayof">1 day ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Rizky Hasanuddin sent you a private message</h3>
-        <p>5 days ago</p>
-        <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Rizky Hasanuddin sent you a private message</h3>
+        </a>
+          <div id="pm">
+          <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+        </div>
+        <p class="dayof">5 days ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Kimberly Smith commented on your picture</h3>
-        <p>1 week ago</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Kimberly Smith commented on your picture</h3>
+        </a>
+        <p class="dayof">1 week ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
-        <p>2 weeks ago</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
+        </a>
+        <p class="dayof">2 weeks ago</p>
       </div>
 
-      <div class="notification">
-        <h3>Anna Kim left the group Chess Club</h3>
-        <p>2 weeks ago</p>
+      <div class="notification-container">
+        <a href="" class="notifications">
+          <h3>Anna Kim left the group Chess Club</h3>
+        </a>
+        <p class="dayof">2 weeks ago</p>
       </div>
+
     </div>
   </div>
   
