--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <div id="header">
       <h1>Notifications 3</h1>
 
-      <h2>Mark all as read</h2>
+      <a href="" id="marked">Mark all as read</a>
     </div>
 
     <div id="main-container">
