--- a/app/index.html
+++ b/app/index.html
@@ -23,55 +23,90 @@
 
     <div id="main-container">
       <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
-        </a>
-        <p class="dayof">1m ago</p>
-      </div>
-
-      <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Angela Gray followed you</h3>
-        </a>
-        <p class="dayof">5m ago</p>
-      </div>
-
-      <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Jacob Thompson has joined your group Chess Club</h3>
-        </a>
-        <p class="dayof">1 day ago</p>
-      </div>
-
-      <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Rizky Hasanuddin sent you a private message</h3>
-        </a>
-          <div id="pm">
-          <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+        <div class="container-left">
+          <img src="../assets/images/avatar-mark-webber.webp" width="50px">
         </div>
-        <p class="dayof">5 days ago</p>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
+          </a>
+          <p class="dayof">1m ago</p>
+        </div>
       </div>
 
       <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Kimberly Smith commented on your picture</h3>
-        </a>
-        <p class="dayof">1 week ago</p>
+        <div class="container-left">
+          <img src="../assets/images/avatar-angela-gray.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Angela Gray followed you</h3>
+          </a>
+          <p class="dayof">5m ago</p>
+        </div>
       </div>
 
       <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
-        </a>
-        <p class="dayof">2 weeks ago</p>
+        <div class="container-left">
+          <img src="../assets/images/avatar-jacob-thompson.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Jacob Thompson has joined your group Chess Club</h3>
+          </a>
+          <p class="dayof">1 day ago</p>
+        </div>
       </div>
 
       <div class="notification-container">
-        <a href="" class="notifications">
-          <h3>Anna Kim left the group Chess Club</h3>
-        </a>
-        <p class="dayof">2 weeks ago</p>
+        <div class="container-left">
+          <img src="../assets/images/avatar-rizky-hasanuddin.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Rizky Hasanuddin sent you a private message</h3>
+          </a>
+            <div id="pm">
+            <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+          </div>
+          <p class="dayof">5 days ago</p>
+        </div>
+      </div>
+
+      <div class="notification-container">
+        <div class="container-left">
+          <img src="../assets/images/avatar-kimberly-smith.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Kimberly Smith commented on your picture</h3>
+          </a>
+          <p class="dayof">1 week ago</p>
+        </div>
+      </div>
+
+      <div class="notification-container">
+        <div class="container-left">
+          <img src="../assets/images/avatar-nathan-peterson.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
+          </a>
+          <p class="dayof">2 weeks ago</p>
+        </div>
+      </div>
+
+      <div class="notification-container">
+        <div class="container-left">
+          <img src="../assets/images/avatar-anna-kim.webp" width="50px">
+        </div>
+        <div class="container-right">
+          <a href="" class="notifications">
+            <h3>Anna Kim left the group Chess Club</h3>
+          </a>
+          <p class="dayof">2 weeks ago</p>
+        </div>
       </div>
 
     </div>
