--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,14 @@
 
   <div>
     <div id="header">
-      <h1>Notifications 3</h1>
-
-      <a href="" id="marked">Mark all as read</a>
+      <div id="header-left">
+        <h1>Notifications</h1>
+        <div id="numOfNotifications">8</div>
+      </div>
+      
+      <div id="header-right">
+        <a href="" id="marked">Mark all as read</a>
+      </div>
     </div>
 
     <div id="main-container">
@@ -28,7 +33,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Mark Webber reacted to your recent post My first tournament today!</h3>
+            <h3><span class="name">Mark Webber</span> reacted to your recent post My first tournament today!</h3>
           </a>
           <p class="dayof">1m ago</p>
         </div>
@@ -40,7 +45,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Angela Gray followed you</h3>
+            <h3><span class="name">Angela Gray</span> followed you</h3>
           </a>
           <p class="dayof">5m ago</p>
         </div>
@@ -52,7 +57,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Jacob Thompson has joined your group Chess Club</h3>
+            <h3><span class="name">Jacob Thompson</span> has joined your group Chess Club</h3>
           </a>
           <p class="dayof">1 day ago</p>
         </div>
@@ -64,7 +69,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Rizky Hasanuddin sent you a private message</h3>
+            <h3><span class="name">Rizky Hasanuddin</span> sent you a private message</h3>
           </a>
             <div id="pm">
             <p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
@@ -79,7 +84,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Kimberly Smith commented on your picture</h3>
+            <h3><span class="name">Kimberly Smith</span> commented on your picture</h3>
           </a>
           <p class="dayof">1 week ago</p>
         </div>
@@ -91,7 +96,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate</h3>
+            <h3><span class="name">Nathan Peterson</span> reacted to your recent post 5 end-game strategies to increase your win rate</h3>
           </a>
           <p class="dayof">2 weeks ago</p>
         </div>
@@ -103,7 +108,7 @@
         </div>
         <div class="container-right">
           <a href="" class="notifications">
-            <h3>Anna Kim left the group Chess Club</h3>
+            <h3><span class="name">Anna Kim</span> left the group Chess Club</h3>
           </a>
           <p class="dayof">2 weeks ago</p>
         </div>
