--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Notifications page</title>
   <link rel="stylesheet"  href="/app/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,20 +24,8 @@
         <a href="" id="marked">Mark all as read</a>
       </div>
     </div>
-
-    <div id="main-container">
-      <div class="notification-container">
-        <div class="container-left">
-          <img src="../assets/images/avatar-mark-webber.webp" width="50px">
-        </div>
-        <div class="container-right">
-          <a href="" class="notifications">
-            <h3><span class="name">Mark Webber</span> reacted to your recent post My first tournament today!</h3>
-          </a>
-          <p class="dayof">1m ago</p>
-        </div>
-      </div>
-    </div>
+ 
+    <div id="main-container"></div>
   </div>
   
   <script src="/app/script.js"></script>
